Added general structure of web view of this repo
Signed-off-by: Throghar <pawel.mirgos@gmail.com>

--- a/curly_brackets/cb.html
+++ b/curly_brackets/cb.html
@@ -4,14 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Curly brackets initialization</title>
-    <style>
-        code {
-            background-color: black;
-            color: white;
-            display: block;
-            white-space: pre-wrap
-        }
-    </style>
+    <link rel="stylesheet" href="../style.css">
 </head>
 
 <body>
@@ -44,6 +37,9 @@
     x jest typem std::initializer_list<int>: false
     </code>
     </p>
+    <div class="rawCode">
+        <a href="main.cpp">RAW CODE</a>
+    </div>
 </body>
 
 </html>
