Updated README and html
Signed-off-by: Throghar <pawel.mirgos@gmail.com>

--- a/index.html
+++ b/index.html
@@ -27,9 +27,15 @@
     </p>
     <p>
         <h4>
-            <a href="interface_and_implementation_inheritance_separation/iaiis.html">3. Iterface and implementation inheritance separation</a>
+            <a href="interface_and_implementation_inheritance_separation/iaiis.html">3. Interface and implementation inheritance separation</a>
         </h4>
         Why sometimes virtual public inheritance is needed.
+    </p>
+    <p>
+        <h4>
+            <a href="sufixes_t_and_v/stav.html">4. Sufixes _t and _v in template metaprogramming in different c++ versions</a>
+        </h4>
+        How small syntax sugar can make code a little bit more readable
     </p>
 
 </body>
