Added SQL simple interface, that shows building queries with builder like design
Signed-off-by: Throghar <pawel.mirgos@gmail.com>

--- a/index.html
+++ b/index.html
@@ -37,6 +37,12 @@
         </h4>
         How small syntax sugar can make code a little bit more readable
     </p>
+    <p>
+        <h4>
+            <a href="sql_query/sq.html">5. SQL Query</a>
+        </h4>
+        Implement simple sql interface with builder like design for queries.
+    </p>
 
 </body>
 
